welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:13: error: not found: value While
While (haveBaggle() == false) {
^